kubernetes/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth
  name: auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth
      version: v1
  template:
    metadata:
      labels:
        app: auth
        version: v1
    spec:
      containers:
        - command:
            - ./auth
          image: 'danding19931115/movie-micro:latest'
          imagePullPolicy: IfNotPresent
          name: auth
          ports:
            - containerPort: 50060
              name: auth
          resources: {}
      restartPolicy: Always
