kubernetes/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth
spec:
  ports:
    - name: auth
      port: 50060
      targetPort: 50060
  selector:
    app: auth
